--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -15,6 +15,7 @@
 	\acrodefplural{CoE}{Centers of Excellence}
 	\acro{DBSCAN}{Density-based Spatial Clustering of Applications with Noise}
 	\acro{ERP}{Enterprise Resource Planning}
+	\acro{FFNN}{Feed-Forward Neural Network}
 	\acro{GIL}{Global Interpreter Lock}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{KDD}{Knowledge Discovery in Databases}
@@ -28,6 +29,7 @@
 	\acro{sklearn}{scikit-learn}
 	\acro{SQL}{Short Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
+	\acro{TPU}{Tensor Processing Unit}
 
 
 \end{acronym}
