--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -330,6 +330,19 @@ Word2Vec uses either SKIPGram or CBOW.
 Word2vec can utilize two models for selecting observations: either skipgram or \ac{CBOW}. 
 
 \newpage
+\section{Transformer Architecture}
+
+\begin{figure}[h!]
+	\label{fig:transformer}
+	\centering
+	\includegraphics[height=18cm]{Bilder/preprocessing/BERT/transformer_architecture.png}
+	\caption{Observations for training with skipgram architecture}
+\end{figure}
+
+
+
+
+\newpage
 \section{Outliers}
 
 \begin{figure}[h!]
