--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -15,6 +15,15 @@
   urldate = {2022-04-27}
 }
 
+@online{alammarIllustratedBERTELMo,
+  title = {The {{Illustrated BERT}}, {{ELMo}}, and Co. ({{How NLP Cracked Transfer Learning}})},
+  author = {Alammar, Jay},
+  url = {https://jalammar.github.io/illustrated-bert/},
+  urldate = {2022-05-20},
+  abstract = {Discussions: Hacker News (98 points, 19 comments), Reddit r/MachineLearning (164 points, 20 comments) Translations: Chinese (Simplified), French 1, French 2, Japanese, Korean, Persian, Russian 2021 Update: I created this brief and highly accessible video intro to BERT The year 2018 has been an inflection point for machine learning models handling text (or more accurately, Natural Language Processing or NLP for short). Our conceptual understanding of how best to represent words and sentences in a way that best captures underlying meanings and relationships is rapidly evolving. Moreover, the NLP community has been putting forward incredibly powerful components that you can freely download and use in your own models and pipelines (It’s been referred to as NLP’s ImageNet moment, referencing how years ago similar developments accelerated the development of machine learning in Computer Vision tasks).},
+  file = {/Users/I518232/Zotero/storage/G5BTG9YP/illustrated-bert.html}
+}
+
 @unpublished{baLayerNormalization2016,
   title = {Layer {{Normalization}}},
   author = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E.},
@@ -50,7 +59,7 @@
   file = {/Users/I518232/Zotero/storage/KX9HQT5F/Devlin et al. - 2019 - BERT Pre-training of Deep Bidirectional Transform.pdf;/Users/I518232/Zotero/storage/9KT9MGZN/1810.html}
 }
 
-@online{___WhyBERTHas2021,
+@online{BERTEmbeddingLayer,
   title = {Why {{BERT}} Has 3 {{Embedding Layers}} and {{Their Implementation Details}}},
   author = {\_\_\_},
   date = {2021-01-03T14:36:54},
